# LISP-Interpreter

./: dune-project  lisp_interpreter.opam
lib/: ast.ml  ast.mli  dune  env.ml  env.mli  registry.ml  registry.mli  repl.ml  repl.mli  value.ml  value.mli
lib/builtins/: arithmetic.ml  boolean.ml  builtins.ml  builtins.mli  comparison.ml  dune
test/: dune  test_lisp_interpreter.ml
test/examples/: 10_nested_functions.out  10_nested_functions.scm  11_counter_closure.out  11_counter_closure.scm  12_complex_recursion.out  12_complex_recursion.scm  13_mutual_computation.out  13_mutual_computation.scm  14_currying.out  14_currying.scm  15_gcd_recursive.out  15_gcd_recursive.scm  1_basic_arithmetic.out  1_basic_arithmetic.scm  2_comparisons_and_booleans.out  2_comparisons_and_booleans.scm  3_conditionals.out  3_conditionals.scm  4_let_bindings.out  4_let_bindings.scm  5_simple_functions.out  5_simple_functions.scm  6_recursion_factorial.out  6_recursion_factorial.scm  7_recursion_fibonacci.out  7_recursion_fibonacci.scm  8_closures.out  8_closures.scm  9_higher_order_functions.out  9_higher_order_functions.scm
